add csrf protection

--- a/web-security/src/main/resources/application.properties
+++ b/web-security/src/main/resources/application.properties
@@ -7,3 +7,15 @@ logging.level.org.springframework.security=TRACE
 
 rsa.private-key=classpath:pki/private.pem
 rsa.public-key=classpath:pki/public.pem
+
+
+# OAuth2 Client Configuration
+spring.security.oauth2.client.registration.google.client-id=your-client-id
+spring.security.oauth2.client.registration.google.client-secret=your-client-secret
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+
+# JWT Configuration
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://your-issuer-uri.com
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://your-issuer-uri.com/.well-known/jwks.json
+
